<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_title"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#438d5c"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_social_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"  app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/text_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_subtitle"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_title"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"  />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/signin_email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:backgroundTint="#438d5c"
        android:textColorHint="#999"
        android:textColor="@android:color/black"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/text_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/signin_password_hint"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:backgroundTint="#438d5c"
        android:textColorHint="#999"
        android:textColor="@android:color/black"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_forgot_password"
        android:fontFamily="@font/poppins_regular"
        android:textColor="#438d5c"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signin_button"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:backgroundTint="#438d5c"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="32dp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layout_social_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/text_signup_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </LinearLayout>

    <TextView
        android:id="@+id/text_signup_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_no_account"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:layout_marginBottom="60dp"  app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>