<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF8F2"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/logo"
        android:contentDescription="Logo CampEats"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/image_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_camp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title_camp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text_eats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title_eats"
                android:fontFamily="@font/inter_semibold"
                android:textColor="#006C46"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_tagline"
            android:fontFamily="@font/inter_regular"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_sign_in"
        android:fontFamily="@font/inter_regular"
        android:textSize="18sp"
        android:backgroundTint="#006C46"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:cornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_title"
        app:layout_constraintBottom_toTopOf="@id/text_copyright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_sign_up"
        android:fontFamily="@font/inter_regular"
        android:textSize="18sp"
        android:backgroundTint="#006C46"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="8dp"
        app:cornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in"
        app:layout_constraintBottom_toTopOf="@id/text_copyright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
    android:id="@+id/text_copyright"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome_copyright"
        android:fontFamily="@font/inter_light"
    android:textColor="@android:color/darker_gray"
    android:textSize="12sp"
    android:gravity="center"
    android:layout_marginBottom="40dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>