<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context=".LanguageActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/logo"
        android:contentDescription="Logo CampEats"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/image_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_camp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_title_camp"
                android:textColor="#262626"
                android:fontFamily="@font/poppins_bold"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_eats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_title_eats"
                android:textColor="#438d5c"
                android:fontFamily="@font/poppins_bold"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_tagline"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_bendera"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="144dp"
        android:contentDescription="Bendera Indonesia"
        android:src="@drawable/bendera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_title" />

    <LinearLayout
        android:id="@+id/layout_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/image_bendera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_selamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_selamat"
            android:textColor="#262626"
            android:fontFamily="@font/poppins_bold"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_datang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_datang"
            android:textColor="#438d5c"
            android:fontFamily="@font/poppins_bold"
            android:textSize="40sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/language_continue"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:backgroundTint="#438d5c"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="40dp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>