<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".DetailActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/arrow_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/content_description_back_button"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp"> <androidx.cardview.widget.CardView
            android:id="@+id/card_meal_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"> <ImageView
            android:id="@+id/image_meal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/food_placeholder2"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_description_meal_image"/>
        </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/text_meal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal_name_placeholder"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@android:color/black"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@id/card_meal_image"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/text_meal_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal_price_placeholder"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_semibold"
                android:textStyle="bold"
                android:textColor="#438d5c"
                app:layout_constraintTop_toTopOf="@id/text_meal_name"
                app:layout_constraintBottom_toBottomOf="@id/text_meal_name"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/text_tag_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_detail"
                android:textColor="@android:color/white"
                android:background="#438d5c"
                android:paddingStart="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:paddingEnd="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@id/text_meal_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/text_meal_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meal_description_placeholder"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                app:layout_constraintTop_toBottomOf="@id/text_tag_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_add_to_cart" />

            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_add_to_cart"
                android:backgroundTint="#438d5c"
                android:textColor="@android:color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="18sp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/text_meal_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>