<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/text_checkout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Checkout"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_checkout_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total: Rp0"
        android:fontFamily="@font/poppins_regular"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_checkout_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_payment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/text_checkout_total"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/radio_payment_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/text_payment_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_ewallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_ewallet"
            android:fontFamily="@font/poppins_regular"/>

        <RadioButton
            android:id="@+id/radio_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_transfer"
            android:fontFamily="@font/poppins_regular"/>

        <RadioButton
            android:id="@+id/radio_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_cash"
            android:fontFamily="@font/poppins_regular"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_confirm_checkout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Bayar Sekarang"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="32dp"
        android:backgroundTint="#438d5c"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/radio_payment_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
